--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <article>
             <aside>
                 <div>
-                    <img src="template.png" alt="ikona perka z gry" id="perkIMG1">
+                    <img src="template.png" alt="ikona perka zz gry" id="perkIMG1">
                     <p id="perkDescription1"></p>
                 </div>
 
