--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!--Ostatnia aktualizacja: min. 7.1.0-->
+
         <link rel="stylesheet" href="stylebkcf.css">
     </head>
 
@@ -49,6 +51,7 @@
                     <option value="Built to Last">
 
                     <option value="Calm Spirit">
+                    <option value="Chemical Trap">
                     <option value="Corrective Action">
                     <option value="Counterforce">
                     <option value="Clairvoyance">
@@ -83,9 +86,11 @@
 
                     <option value="Leader">
                     <option value="Left Behind">
+                    <option value="Light Footed">
                     <option value="Lithe">
                     <option value="Low Profile">
                     <option value="Lucky Break">
+                    <option value="Lucky Star">
 
                     <option value="Made for This">
                     <option value="Mettle of Man">
@@ -154,10 +159,12 @@
 
                     <option value="A Nurse's Calling">
                     <option value="Agitation">
+                    <option value="Alien Instinct">
                     <option value="Awakened Awareness">
 
                     <option value="Bamboozle">
                     <option value="Barbecue & Chilli">
+                    <option value="Batteries Included">
                     <option value="Beast of Prey">
                     <option value="Blood Echo">
                     <option value="Blood Warden">
@@ -186,6 +193,7 @@
                     <option value="Forced Hesitation">
                     <option value="Forced Penance">
                     <option value="Franklin's Demise">
+                    <option value="Friends 'Til the End">
                     <option value="Furtive Chase">
 
                     <option value="Game Afoot">
@@ -205,6 +213,7 @@
                     <option value="Hex: Retribution">
                     <option value="Hex: Ruin">
                     <option value="Hex: The Third Seal">
+                    <option value="Hex: Two Can Play">
                     <option value="Hex: Undying">
                     <option value="Hoarder">
                     <option value="Hubris">
@@ -239,6 +248,7 @@
                     <option value="Predator">
 
                     <option value="Rancor">
+                    <option value="Rapid Brutality">
                     <option value="Remember Me">
 
                     <option value="Save the Best for Last">
@@ -261,6 +271,7 @@
                     <option value="Tinkerer">
                     <option value="Trail of Torment">
 
+                    <option value="Ultimate Weapon">
                     <option value="Unnerving Presence">
 
                     <option value="Zanshin Tactics">
