--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--Ostatnia aktualizacja: min. 7.1.0-->
+        <!--Ostatnia aktualizacja: 7.1.0-->
 
         <link rel="stylesheet" href="stylebkcf.css">
     </head>
