--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
         <footer>
             <p>Zrobione przez <b>Discord Pr0tzyQ</b></p>
-            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten</b></i></p>
+            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf</b></i></p>
         </footer>
 
         <script src="shrine_builder_skrypt.js"></script>
