--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--Ostatnia aktualizacja: 7.1.0-->
+        <!--Ostatnia aktualizacja: 7.3.3 (dodać wszystko od st, i chucky)-->
 
         <link rel="stylesheet" href="stylebkcf.css">
     </head>
@@ -30,9 +30,11 @@
                     <option value="Appraisal">
                     <option value="Autodidact">
                         
+                    <option value="Babysitter">
                     <option value="Background Player">
                     <option value="Balanced Landing">
                     <option value="Better than New">
+                    <option value="Better Together">
                     <option value="Bite the Bullet">
                     <option value="Blast Mine">
                     <option value="Blood Pact">
@@ -51,6 +53,7 @@
                     <option value="Built to Last">
 
                     <option value="Calm Spirit">
+                    <option value="Camaraderie">
                     <option value="Chemical Trap">
                     <option value="Corrective Action">
                     <option value="Counterforce">
@@ -72,6 +75,7 @@
                     <option value="Empathy">
 
                     <option value="Fast Track">
+                    <option value="Fixated">
                     <option value="Flashbang">
                     <option value="Flip-Flop">
                     <option value="Fogwise">
@@ -82,6 +86,7 @@
                     <option value="Hyperfocus">
 
                     <option value="Inner Focus">
+                    <option value="Inner Strength">
                     <option value="Iron Will">
 
                     <option value="Leader">
@@ -125,6 +130,7 @@
                     <option value="Saboteur">
                     <option value="Scavenger">
                     <option value="Scene Partner">
+                    <option value="Second Wind">
                     <option value="Self-Care">
                     <option value="Self-Preservation">
                     <option value="Smash Hit">
@@ -175,6 +181,7 @@
                     <option value="Corrupt Intervention">
                     <option value="Coulrophobia">
                     <option value="Coup de Grâce">
+                    <option value="Cruel Limits">
 
                     <option value="Dark Devotion">
                     <option value="Darkness Revealed">
@@ -233,6 +240,7 @@
                     <option value="Mad Grit">
                     <option value="Make Your Choice">
                     <option value="Merciless Storm">
+                    <option value="Mindbreaker">
                     <option value="Monitor & Abuse">
 
                     <option value="Nemesis">
@@ -261,6 +269,7 @@
                     <option value="Starstruck">
                     <option value="Stridor">
                     <option value="Superior Anatomy">
+                    <option value="Surge">
                     <option value="Surveillance">
 
                     <option value="Terminus">
@@ -333,7 +342,7 @@
 
         <footer>
             <p>Zrobione przez <b>Discord Pr0tzyQ</b></p>
-            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf</b></i></p>
+            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf, wpserek</b></i></p>
         </footer>
 
         <script src="shrine_builder_skrypt.js"></script>
