--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--Ostatnia aktualizacja: 7.3.3 (dodać wszystko od st, i chucky)-->
+        <!--Ostatnia aktualizacja: 15.03.2024-->
 
         <link rel="stylesheet" href="stylebkcf.css">
     </head>
@@ -43,6 +43,7 @@
                     <option value="Boon: Circle of Healing">
                     <option value="Boon: Dark Theory">
                     <option value="Boon: Exponential">
+                    <option value="Boon: Illumination">
                     <option value="Boon: Shadow Step">
                     <option value="Bond">
                     <option value="Borrowed Time">
@@ -54,6 +55,7 @@
 
                     <option value="Calm Spirit">
                     <option value="Camaraderie">
+                    <option value="Champion of Light">
                     <option value="Chemical Trap">
                     <option value="Corrective Action">
                     <option value="Counterforce">
@@ -62,6 +64,7 @@
 
                     <option value="Dance With Me">
                     <option value="Dead Hard">
+                    <option value="Deadline">
                     <option value="Deception">
                     <option value="Decisive Strike">
                     <option value="Deliverance">
@@ -87,6 +90,7 @@
 
                     <option value="Inner Focus">
                     <option value="Inner Strength">
+                    <option value="Invocation: Weaving Spiders">
                     <option value="Iron Will">
 
                     <option value="Leader">
@@ -140,6 +144,7 @@
                     <option value="Sprint Burst">
                     <option value="Stake Out">
                     <option value="Streetwise">
+                    <option value="Strength in Shadows">
 
                     <option value="Teamwork: Collective Stealth">
                     <option value="Teamwork: Power of Two">
@@ -156,6 +161,7 @@
 
                     <option value="Wake Up!">
                     <option value="We're Gonna Live Forever">
+                    <option value="Wicked">
                     <option value="Windows of Opportunity">
                     <option value="Wiretap">
                     <!--
@@ -281,6 +287,9 @@
                     <option value="Trail of Torment">
 
                     <option value="Ultimate Weapon">
+                    <option value="Undone">
+                    <option value="Unforeseen">
+                    <option value="Unbound">
                     <option value="Unnerving Presence">
 
                     <option value="Zanshin Tactics">
