zmieniono automatyczne oznaczenie wersji na admin

--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
                 <button class="mainbuttons" type="reset">RESET</button>
                 <br>
 
-                <input type="radio" id="classic" value="classic" name="version" checked> 
+                <input type="radio" id="classic" value="classic" name="version"> 
                 <label for="classic"><i>CLASSIC VERSION</i></label>
 
-                <input type="radio" id="admin" value="admin" class="checkboxR" name="version">
+                <input type="radio" id="admin" value="admin" class="checkboxR" name="version" checked>
                 <label for="admin"><i>ADMIN VERSION</i></label>
             </form>
 
