--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--Ostatnia aktualizacja: 15.03.2024-->
+        <!--Ostatnia aktualizacja: 27.06.2024-->
 
         <link rel="stylesheet" href="stylebkcf.css">
     </head>
@@ -18,7 +18,8 @@
     <body>
         <section>
             <form id="select_perk">
-                <h1 class="fajne">Wpisz nazwę umiejętności po polsku, skrótem, lub wybierz nazwę perka po angielsku:<br><br></h1>
+                <h1 class="fajne">Wpisz nazwę umiejętności po polsku, skrótem, lub wybierz nazwę perka po angielsku:</h1>
+                <h5>Ostatnia wersja: 8.0.2</h5>
 
                 <input type="text" list="perks" id="input_perk" placeholder="deadlock, wybawienie, bt" autocomplete="off">
                 <datalist id="perks">
@@ -310,8 +311,7 @@
                 <input type="radio" id="admin" value="admin" class="checkboxR" name="version" checked>
                 <label for="admin"><i>ADMIN VERSION</i></label>
             </form>
-
-        </section>
+        </section><br>
 
         <article>
             <aside>
