--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <form id="select_perk">
                 <h1 class="fajne">Wpisz nazwę umiejętności po polsku, skrótem, lub wybierz nazwę perka po angielsku:</h1>
-                <h5>Ostatnia wersja: 8.0.2</h5>
+                <h5>Ostatnia wersja: 8.1.0 (PTB)</h5>
 
                 <input type="text" list="perks" id="input_perk" placeholder="deadlock, wybawienie, bt" autocomplete="off">
                 <datalist id="perks">
@@ -351,7 +351,7 @@
 
         <footer>
             <p>Zrobione przez <b>Discord Pr0tzyQ</b></p>
-            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf, wpserek</b></i></p>
+            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf, wpserek, lividius</b></i></p>
         </footer>
 
         <script src="shrine_builder_skrypt.js"></script>
