--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
                     <option value="Made for This">
                     <option value="Mettle of Man">
+                    <option value="Mirrored Illusion">
 
                     <option value="No Mither">
 
@@ -144,6 +145,7 @@
                     <option value="Soul Guard">
                     <option value="Sprint Burst">
                     <option value="Stake Out">
+                    <option value="Still Sight">
                     <option value="Streetwise">
                     <option value="Strength in Shadows">
 
