--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         
                     <option value="Babysitter">
                     <option value="Background Player">
+                    <option value="Bardic Inspiration">
                     <option value="Balanced Landing">
                     <option value="Better than New">
                     <option value="Better Together">
@@ -79,6 +80,7 @@
                     <option value="Empathy">
 
                     <option value="Fast Track">
+                    <option value="Finesse">
                     <option value="Fixated">
                     <option value="Flashbang">
                     <option value="Flip-Flop">
@@ -86,6 +88,7 @@
                     <option value="For the People">
                     <option value="Friendly Competition">
 
+                    <option value="Hardened">
                     <option value="Head On">
                     <option value="Hyperfocus">
 
@@ -143,6 +146,7 @@
                     <option value="Sole Survivor">
                     <option value="Solidarity">
                     <option value="Soul Guard">
+                    <option value="Specialist">
                     <option value="Sprint Burst">
                     <option value="Stake Out">
                     <option value="Still Sight">
@@ -192,6 +196,7 @@
                     <option value="Coup de Grâce">
                     <option value="Cruel Limits">
 
+                    <option value="Dark Arrogance">
                     <option value="Dark Devotion">
                     <option value="Darkness Revealed">
                     <option value="Dead Man's Switch">
@@ -241,6 +246,7 @@
 
                     <option value="Knock Out">
 
+                    <option value="Languid Touch">
                     <option value="Lethal Pursuer">
                     <option value="Leverage">
                     <option value="Lightborn">
@@ -294,6 +300,8 @@
                     <option value="Unforeseen">
                     <option value="Unbound">
                     <option value="Unnerving Presence">
+
+                    <option value="Weave Attunement">
 
                     <option value="Zanshin Tactics">
 
