--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
         <footer>
             <p>Zrobione przez <b>Discord Pr0tzyQ</b></p>
-            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf, wpserek, lividius</b></i></p>
+            <p><i>kod: <b>bkcf</b> opis umiejętności: <b>gigachad, awicki, Tina, WcaleNieRafau, whiten, bkcf, wpserek, lividius, ezrael, kuro</b></i></p>
         </footer>
 
         <script src="shrine_builder_skrypt.js"></script>
