--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <form id="select_perk">
                 <h1 class="fajne">Wpisz nazwę umiejętności po polsku, skrótem, lub wybierz nazwę perka po angielsku:</h1>
-                <h5>Ostatnia wersja: 8.1.0 (PTB)</h5>
+                <h5>Ostatnia wersja: 9.1.0 (rocznica)</h5>
 
                 <input type="text" list="perks" id="input_perk" placeholder="deadlock, wybawienie, bt" autocomplete="off">
                 <datalist id="perks">
@@ -33,8 +33,8 @@
                         
                     <option value="Babysitter">
                     <option value="Background Player">
-                    <option value="Bardic Inspiration">
                     <option value="Balanced Landing">
+                    <option value="Bardic Inspiration">
                     <option value="Better than New">
                     <option value="Better Together">
                     <option value="Bite the Bullet">
@@ -42,12 +42,12 @@
                     <option value="Blood Pact">
                     <option value="Blood Rush">
                     <option value="Boil Over">
+                    <option value="Bond">
                     <option value="Boon: Circle of Healing">
                     <option value="Boon: Dark Theory">
                     <option value="Boon: Exponential">
                     <option value="Boon: Illumination">
                     <option value="Boon: Shadow Step">
-                    <option value="Bond">
                     <option value="Borrowed Time">
                     <option value="Botany Knowledge">
                     <option value="Breakdown">
@@ -59,9 +59,10 @@
                     <option value="Camaraderie">
                     <option value="Champion of Light">
                     <option value="Chemical Trap">
+                    <option value="Clairvoyance">
+                    <option value="Clean Break">
                     <option value="Corrective Action">
                     <option value="Counterforce">
-                    <option value="Clairvoyance">
                     <option value="Cut Loose">
 
                     <option value="Dance With Me">
@@ -74,10 +75,14 @@
                     <option value="Detective's Hunch">
                     <option value="Distortion">
                     <option value="Diversion">
+                    <option value="Do no Harm">
                     <option value="Dramaturgy">
+                    <option value="Duty of Care">
 
                     <option value="Empathic Connection">
                     <option value="Empathy">
+                    <option value="Exultation">
+                    <option value="Eyes of Belmont">
 
                     <option value="Fast Track">
                     <option value="Finesse">
@@ -94,6 +99,7 @@
 
                     <option value="Inner Focus">
                     <option value="Inner Strength">
+                    <option value="Invocation: Treacherous Crows">
                     <option value="Invocation: Weaving Spiders">
                     <option value="Iron Will">
 
@@ -108,6 +114,7 @@
                     <option value="Made for This">
                     <option value="Mettle of Man">
                     <option value="Mirrored Illusion">
+                    <option value="Moment of Glory">
 
                     <option value="No Mither">
 
@@ -125,9 +132,11 @@
                     <option value="Power Struggle">
                     <option value="Prove Thyself">
 
-                    <option value="Quick Gambit">
                     <option value="Quick & Quiet">
+                    <option value="Quick Gambit">
 
+                        
+                    <option value="Rapid Response">
                     <option value="Reactive Healing">
                     <option value="Reassurance">
                     <option value="Red Herring">
@@ -142,6 +151,7 @@
                     <option value="Second Wind">
                     <option value="Self-Care">
                     <option value="Self-Preservation">
+                    <option value="Shoulder the Burden">
                     <option value="Smash Hit">
                     <option value="Sole Survivor">
                     <option value="Solidarity">
@@ -179,6 +189,7 @@
                     <option value="A Nurse's Calling">
                     <option value="Agitation">
                     <option value="Alien Instinct">
+                    <option value="All-Shaking Thunder">
                     <option value="Awakened Awareness">
 
                     <option value="Bamboozle">
@@ -202,8 +213,9 @@
                     <option value="Dead Man's Switch">
                     <option value="Deadlock">
                     <option value="Deathbound">
-                    <option value="Dissolution">
                     <option value="Discordance">
+                    <option value="Dissolution">
+                    <option value="Dominace">
                     <option value="Dragon's Grip">
                     <option value="Dying Light">
 
@@ -213,6 +225,7 @@
                     <option value="Fire Up">
                     <option value="Forced Hesitation">
                     <option value="Forced Penance">
+                    <option value="Forever Entwined">
                     <option value="Franklin's Demise">
                     <option value="Friends 'Til the End">
                     <option value="Furtive Chase">
@@ -222,13 +235,15 @@
                     <option value="Genetic Limits">
                     <option value="Grim Embrace">
 
-                    <option value="Hangman's Trick">
+                    <option value="Haywire">
+                    <option value="Help Wanted">
                     <option value="Hex: Blood Favour">
                     <option value="Hex: Crowd Control">
                     <option value="Hex: Devour Hope">
                     <option value="Hex: Face the Darkness">
                     <option value="Hex: Haunted Ground">
                     <option value="Hex: Huntress Lullaby">
+                    <option value="Hex: Nothing but Missery">
                     <option value="Hex: Pentimento">
                     <option value="Hex: Plaything">
                     <option value="Hex: Retribution">
@@ -236,8 +251,10 @@
                     <option value="Hex: The Third Seal">
                     <option value="Hex: Two Can Play">
                     <option value="Hex: Undying">
+                    <option value="Hex: Wrethed Faith">
                     <option value="Hoarder">
                     <option value="Hubris">
+                    <option value="Human Greed">
                     <option value="Hysteria">
 
                     <option value="I'm All Ears">
@@ -259,13 +276,16 @@
                     <option value="Monitor & Abuse">
 
                     <option value="Nemesis">
+                    <option value="No Quarter">
                     <option value="No Way Out">
+                    <option value="None are Free">
                     <option value="Nowhere to Hide">
 
                     <option value="Oppression">
                     <option value="Overcharge">
                     <option value="Overwhelming Presence">
 
+                    <option value="Phatom Fear">
                     <option value="Play with Your Food">
                     <option value="Pop Goes the Weasel">
                     <option value="Predator">
@@ -277,6 +297,8 @@
                     <option value="Save the Best for Last">
                     <option value="Scourge Hook: Floods of Rage">
                     <option value="Scourge Hook: Gift of Pain">
+                    <option value="Scourge Hook: Hangman's Trick">
+                    <option value="Scourge Hook: Jagged Compass">
                     <option value="Scourge Hook: Pain Resonance">
                     <option value="Septic Touch">
                     <option value="Shadowborn">
@@ -296,9 +318,9 @@
                     <option value="Trail of Torment">
 
                     <option value="Ultimate Weapon">
+                    <option value="Unbound">
                     <option value="Undone">
                     <option value="Unforeseen">
-                    <option value="Unbound">
                     <option value="Unnerving Presence">
 
                     <option value="Weave Attunement">
