--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <option value="Hex: Face the Darkness">
                     <option value="Hex: Haunted Ground">
                     <option value="Hex: Huntress Lullaby">
-                    <option value="Hex: Nothing but Missery">
+                    <option value="Hex: Nothing but Misery">
                     <option value="Hex: Pentimento">
                     <option value="Hex: Plaything">
                     <option value="Hex: Retribution">
