--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <option value="Deathbound">
                     <option value="Discordance">
                     <option value="Dissolution">
-                    <option value="Dominace">
+                    <option value="dominance">
                     <option value="Dragon's Grip">
                     <option value="Dying Light">
 
