--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <option value="Hex: The Third Seal">
                     <option value="Hex: Two Can Play">
                     <option value="Hex: Undying">
-                    <option value="Hex: Wrethed Faith">
+                    <option value="Hex: Wrethed Fate">
                     <option value="Hoarder">
                     <option value="Hubris">
                     <option value="Human Greed">
